# ESP32-S3-touch-1.85c-focus

./: .gitignore  README.md  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c
main/config/: config_manager.c  config_manager.h
main/data/: config.json
main/drivers/: display.c  display.h  lvgl_module.c  lvgl_module.h  ntp_time.c  ntp_time.h  time_display.c  time_display.h  timezone.c  timezone.h  touch.c  touch.h  wifi_connection.c  wifi_connection.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
main/ui/fonts/: ui_font_ArchivoBlackRegular.c  ui_font_Font1.c  ui_font_MomoTrustDisplay.c  ui_font_ZalandoSansExpandedVariableFontwght.c
main/ui/images/: ui_img_372656621.c  ui_img_back24_png.c  ui_img_back32_png.c  ui_img_kafkar_logo_no_boarder_100_white_png.c  ui_img_settings32_png.c
main/ui/screens/: ui_About.c  ui_About.h  ui_Focus.c  ui_Focus.h  ui_Screen1.c  ui_Screen1.h  ui_SetupFocus.c  ui_SetupFocus.h  ui_flash_screen.c  ui_flash_screen.h  ui_time.c  ui_time.h
