idf_component_register(SRCS 
                    "main.c" 
                    "drivers/i2c_utils.c" 
                    "drivers/display.c" 
                    "drivers/touch.c" 
                    "drivers/extendio.c" 
                    "drivers/lvgl_module.c" 
                    "drivers/wifi_connection.c"
                    "drivers/ntp_time.c"
                    "drivers/time_display.c"
                    "drivers/timezone.c"                    
                    "ui/ui.c" 
                    "ui/ui_helpers.c"
                    "ui/screens/ui_flash_screen.c"
                    "ui/screens/ui_About.c" 
                    "ui/screens/ui_time.c"
                    "ui/screens/ui_SetupFocus.c"
                    "ui/screens/ui_Focus.c"
                    "ui/components/ui_comp_hook.c"
                    "ui/fonts/ui_font_ArchivoBlackRegular.c" 
                    "ui/fonts/ui_font_Font1.c" 
                    "ui/fonts/ui_font_MomoTrustDisplay.c"
                    "ui/fonts/ui_font_ZalandoSansExpandedVariableFontwght.c"
                    "ui/images/ui_img_372656621.c"
                    "ui/images/ui_img_back24_png.c"
                    "ui/images/ui_img_back32_png.c"
                    "ui/images/ui_img_kafkar_logo_no_boarder_100_white_png.c" 
                    "ui/images/ui_img_settings32_png.c"
                    INCLUDE_DIRS "." "drivers" "ui")
